# DubMux

./: .gitignore  .instructions.md  README.md  index.html  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  mux.rs
src/features/matching/: matching.ts  types.ts
src/features/processing/: jobPlan.ts  mux.ts
src/test/: matching.test.ts
