[package]
name = "dubmux"
version = "0.1.0"
description = "Desktop utility for adding external audio tracks to episodic video files"
authors = ["GitHub Copilot"]
edition = "2021"

[lib]
name = "audio_connector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
